@@ -4,6 +4,7 @@ import com.example.pessoamicroservice.client.dto.AddressResponseDTO;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
 
+import java.util.Collections;
 import java.util.List;
 
 @Slf4j
@@ -13,6 +14,6 @@ public class AddressClientFallback implements AddressClient {
     @Override
     public List<AddressResponseDTO> getAddressFromClient(final Long id) {
         log.info("fallback client");
-        return List.of();
+        return Collections.emptyList();
     }
 }
